src/grammar/YanchukSetElementsGrParser.java
package grammar;// Generated from C:/Users/37544/Documents/����/Compiler/grammar\YanchukSetElementsGr.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class YanchukSetElementsGrParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAIN=1, OPEN_BRACKET=2, CLOSE_BRACKET=3, OPEN_CURLY_BRACKET=4, CLOSE_CURLY_BRACKET=5, 
		OPEN_SQUARE_BRACKET=6, CLOSE_SQUARE_BRACKET=7, INT=8, ELEMENT=9, SET=10, 
		PRINT=11, IF=12, ELSE=13, FOR=14, WHILE=15, RETURN=16, FUNCTION=17, SIZE=18, 
		GET=19, INDEX_OF=20, EQULS=21, DOT=22, COMMA=23, PLUS=24, MINUS=25, MULTIPLY=26, 
		DIVIDE=27, NEGATION=28, EQUAL=29, NON_EQUAL=30, LESS=31, GREATER=32, SPACE=33, 
		NAME=34, NUMBER=35, LINE=36;
	public static final int
		RULE_setExpression = 0, RULE_program = 1, RULE_block = 2, RULE_declaration = 3, 
		RULE_declarationElement = 4, RULE_print = 5, RULE_printSet = 6, RULE_inputSignature = 7, 
		RULE_functionCall = 8, RULE_type = 9, RULE_signatureFunction = 10, RULE_functionReturn = 11, 
		RULE_functionNonReturn = 12, RULE_blockReturn = 13, RULE_blockNonReturn = 14, 
		RULE_equalCompare = 15, RULE_compare = 16, RULE_simpleCompare = 17, RULE_negationCompare = 18, 
		RULE_elseBlock = 19, RULE_ifBlock = 20, RULE_whileBlock = 21, RULE_sizeExpression = 22, 
		RULE_getExpression = 23, RULE_indexOfExpression = 24, RULE_expression = 25, 
		RULE_content = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"setExpression", "program", "block", "declaration", "declarationElement", 
			"print", "printSet", "inputSignature", "functionCall", "type", "signatureFunction", 
			"functionReturn", "functionNonReturn", "blockReturn", "blockNonReturn", 
			"equalCompare", "compare", "simpleCompare", "negationCompare", "elseBlock", 
			"ifBlock", "whileBlock", "sizeExpression", "getExpression", "indexOfExpression", 
			"expression", "content"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'int'", "'element'", 
			"'set'", "'print'", "'if'", "'else'", "'for'", "'while'", "'return'", 
			"'function'", "'size'", "'get'", "'indexOf'", "'='", "'.'", "','", "'+'", 
			"'-'", "'*'", "'/'", "'!'", "'=='", "'!='", "'<'", "'>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MAIN", "OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_CURLY_BRACKET", 
			"CLOSE_CURLY_BRACKET", "OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", 
			"INT", "ELEMENT", "SET", "PRINT", "IF", "ELSE", "FOR", "WHILE", "RETURN", 
			"FUNCTION", "SIZE", "GET", "INDEX_OF", "EQULS", "DOT", "COMMA", "PLUS", 
			"MINUS", "MULTIPLY", "DIVIDE", "NEGATION", "EQUAL", "NON_EQUAL", "LESS", 
			"GREATER", "SPACE", "NAME", "NUMBER", "LINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "YanchukSetElementsGr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YanchukSetElementsGrParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SetExpressionContext extends ParserRuleContext {
		public TerminalNode OPEN_CURLY_BRACKET() { return getToken(YanchukSetElementsGrParser.OPEN_CURLY_BRACKET, 0); }
		public List<TerminalNode> NAME() { return getTokens(YanchukSetElementsGrParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(YanchukSetElementsGrParser.NAME, i);
		}
		public TerminalNode CLOSE_CURLY_BRACKET() { return getToken(YanchukSetElementsGrParser.CLOSE_CURLY_BRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(YanchukSetElementsGrParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(YanchukSetElementsGrParser.COMMA, i);
		}
		public SetExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).enterSetExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).exitSetExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YanchukSetElementsGrVisitor ) return ((YanchukSetElementsGrVisitor<? extends T>)visitor).visitSetExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetExpressionContext setExpression() throws RecognitionException {
		SetExpressionContext _localctx = new SetExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_setExpression);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(OPEN_CURLY_BRACKET);
			setState(59);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(55);
					match(NAME);
					setState(56);
					match(COMMA);
					}
					} 
				}
				setState(61);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(62);
			match(NAME);
			setState(63);
			match(CLOSE_CURLY_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(YanchukSetElementsGrParser.MAIN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<FunctionReturnContext> functionReturn() {
			return getRuleContexts(FunctionReturnContext.class);
		}
		public FunctionReturnContext functionReturn(int i) {
			return getRuleContext(FunctionReturnContext.class,i);
		}
		public List<FunctionNonReturnContext> functionNonReturn() {
			return getRuleContexts(FunctionNonReturnContext.class);
		}
		public FunctionNonReturnContext functionNonReturn(int i) {
			return getRuleContext(FunctionNonReturnContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YanchukSetElementsGrVisitor ) return ((YanchukSetElementsGrVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(MAIN);
			setState(66);
			block();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				setState(69);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(67);
					functionReturn();
					}
					break;
				case 2:
					{
					setState(68);
					functionNonReturn();
					}
					break;
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode OPEN_CURLY_BRACKET() { return getToken(YanchukSetElementsGrParser.OPEN_CURLY_BRACKET, 0); }
		public TerminalNode CLOSE_CURLY_BRACKET() { return getToken(YanchukSetElementsGrParser.CLOSE_CURLY_BRACKET, 0); }
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YanchukSetElementsGrVisitor ) return ((YanchukSetElementsGrVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(OPEN_CURLY_BRACKET);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ELEMENT) | (1L << SET) | (1L << PRINT) | (1L << IF) | (1L << WHILE) | (1L << NAME))) != 0)) {
				{
				{
				setState(75);
				content();
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			match(CLOSE_CURLY_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(YanchukSetElementsGrParser.NAME, 0); }
		public TerminalNode EQULS() { return getToken(YanchukSetElementsGrParser.EQULS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SET() { return getToken(YanchukSetElementsGrParser.SET, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YanchukSetElementsGrVisitor ) return ((YanchukSetElementsGrVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SET) {
				{
				setState(83);
				match(SET);
				}
			}

			setState(86);
			match(NAME);
			setState(87);
			match(EQULS);
			setState(88);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationElementContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(YanchukSetElementsGrParser.NAME, 0); }
		public TerminalNode EQULS() { return getToken(YanchukSetElementsGrParser.EQULS, 0); }
		public TerminalNode LINE() { return getToken(YanchukSetElementsGrParser.LINE, 0); }
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public GetExpressionContext getExpression() {
			return getRuleContext(GetExpressionContext.class,0);
		}
		public TerminalNode ELEMENT() { return getToken(YanchukSetElementsGrParser.ELEMENT, 0); }
		public DeclarationElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).enterDeclarationElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).exitDeclarationElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YanchukSetElementsGrVisitor ) return ((YanchukSetElementsGrVisitor<? extends T>)visitor).visitDeclarationElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationElementContext declarationElement() throws RecognitionException {
		DeclarationElementContext _localctx = new DeclarationElementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declarationElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELEMENT) {
				{
				setState(90);
				match(ELEMENT);
				}
			}

			setState(93);
			match(NAME);
			setState(94);
			match(EQULS);
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(95);
				match(LINE);
				}
				break;
			case 2:
				{
				setState(96);
				functionCall();
				}
				break;
			case 3:
				{
				setState(97);
				getExpression();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(YanchukSetElementsGrParser.PRINT, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(YanchukSetElementsGrParser.OPEN_BRACKET, 0); }
		public TerminalNode LINE() { return getToken(YanchukSetElementsGrParser.LINE, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(YanchukSetElementsGrParser.CLOSE_BRACKET, 0); }
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).exitPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YanchukSetElementsGrVisitor ) return ((YanchukSetElementsGrVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(PRINT);
			setState(101);
			match(OPEN_BRACKET);
			setState(102);
			match(LINE);
			setState(103);
			match(CLOSE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintSetContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(YanchukSetElementsGrParser.PRINT, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(YanchukSetElementsGrParser.OPEN_BRACKET, 0); }
		public TerminalNode NAME() { return getToken(YanchukSetElementsGrParser.NAME, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(YanchukSetElementsGrParser.CLOSE_BRACKET, 0); }
		public PrintSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printSet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).enterPrintSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).exitPrintSet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YanchukSetElementsGrVisitor ) return ((YanchukSetElementsGrVisitor<? extends T>)visitor).visitPrintSet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintSetContext printSet() throws RecognitionException {
		PrintSetContext _localctx = new PrintSetContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_printSet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(PRINT);
			setState(106);
			match(OPEN_BRACKET);
			setState(107);
			match(NAME);
			setState(108);
			match(CLOSE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputSignatureContext extends ParserRuleContext {
		public TerminalNode OPEN_BRACKET() { return getToken(YanchukSetElementsGrParser.OPEN_BRACKET, 0); }
		public List<TerminalNode> NAME() { return getTokens(YanchukSetElementsGrParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(YanchukSetElementsGrParser.NAME, i);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(YanchukSetElementsGrParser.CLOSE_BRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(YanchukSetElementsGrParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(YanchukSetElementsGrParser.COMMA, i);
		}
		public InputSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputSignature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).enterInputSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).exitInputSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YanchukSetElementsGrVisitor ) return ((YanchukSetElementsGrVisitor<? extends T>)visitor).visitInputSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputSignatureContext inputSignature() throws RecognitionException {
		InputSignatureContext _localctx = new InputSignatureContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_inputSignature);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(OPEN_BRACKET);
			setState(115);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(111);
					match(NAME);
					setState(112);
					match(COMMA);
					}
					} 
				}
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(118);
			match(NAME);
			setState(119);
			match(CLOSE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(YanchukSetElementsGrParser.NAME, 0); }
		public InputSignatureContext inputSignature() {
			return getRuleContext(InputSignatureContext.class,0);
		}
		public TerminalNode OPEN_BRACKET() { return getToken(YanchukSetElementsGrParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(YanchukSetElementsGrParser.CLOSE_BRACKET, 0); }
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).enterFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).exitFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YanchukSetElementsGrVisitor ) return ((YanchukSetElementsGrVisitor<? extends T>)visitor).visitFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functionCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(121);
			match(NAME);
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(122);
				inputSignature();
				}
				break;
			case 2:
				{
				{
				setState(123);
				match(OPEN_BRACKET);
				setState(124);
				match(CLOSE_BRACKET);
				}
				}
				break;
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(YanchukSetElementsGrParser.SET, 0); }
		public TerminalNode ELEMENT() { return getToken(YanchukSetElementsGrParser.ELEMENT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YanchukSetElementsGrVisitor ) return ((YanchukSetElementsGrVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_la = _input.LA(1);
			if ( !(_la==ELEMENT || _la==SET) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignatureFunctionContext extends ParserRuleContext {
		public TerminalNode OPEN_BRACKET() { return getToken(YanchukSetElementsGrParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(YanchukSetElementsGrParser.CLOSE_BRACKET, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> NAME() { return getTokens(YanchukSetElementsGrParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(YanchukSetElementsGrParser.NAME, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(YanchukSetElementsGrParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(YanchukSetElementsGrParser.COMMA, i);
		}
		public SignatureFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signatureFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).enterSignatureFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YanchukSetElementsGrListener ) ((YanchukSetElementsGrListener)listener).exitSignatureFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YanchukSetElementsGrVisitor ) return ((YanchukSetElementsGrVisitor<? extends T>)visitor).visitSignatureFunction(this);
			else return visitor.visitChildren(this);
		}
	}
